[package]
name = "kvs"
version = "0.1.0"
authors = ["oluwamuyiwa <onigbindemy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0"
serde = "1.0.126"
serde_json = "1.0.64"
[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
